# flake8-awesome

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  SECURITY.md  dependabot.yml  labeler.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: release-draft.yml  release.yml  set-labels.yml
flake8_aggressive/: __init__.py
flake8_awesome/: __init__.py
