[tool.poetry]
name = "flake8-awesome"
version = "1.2.0"
description = "Flake8 awesome plugins pack"
authors = ["Afonasev Evgeniy <ea.afonasev@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/afonasev/flake8-awesome"
homepage = "https://pypi.org/project/flake8-awesome"
keywords = ['flake8', 'plugin']

[tool.poetry.dependencies]
python = "^3.6"
flake8 = "*"
flake8-breakpoint = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-eradicate = "*"
flake8-if-expr = "*"
flake8-isort = "*"
flake8-logging-format = "*"
flake8-print = "*"
flake8-pytest = "*"
flake8-pytest-style = "^0.1.3"
flake8-return = "*"
pep8-naming = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
