[tool.poetry]
name = "flake8-aggressive"
version = "1.0.0"
description = "Flake8 aggressive plugins pack"
authors = ["Austin Page <jaustinpage@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/jaustinpage/flake8-aggressive"
homepage = "https://pypi.org/project/flake8-aggreessive"
keywords = ['flake8', 'plugin']

[tool.poetry.dependencies]
python = "^3.6"
flake8 = "*"
flake8-annotations-complexity = "*"
flake8-bandit = "*"
flake8-breakpoint = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-eradicate = "*"
flake8-expression-complexity = "*"
flake8-if-expr = "*"
flake8-isort = "*"
flake8-logging-format = "*"
flake8-print = "*"
flake8-pytest = "*"
flake8-pytest-style = "*"
flake8-requirements = "*"
flake8-return = "*"
pep8-naming = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
