[tool.poetry]
name = "flake8-aggressive"
version = "1.1.1"
description = "Flake8 aggressive plugins pack"
authors = ["Austin Page <jaustinpage@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/jaustinpage/flake8-aggressive"
homepage = "https://pypi.org/project/flake8-aggreessive"
keywords = ['flake8', 'plugin']

[tool.poetry.dependencies]
python = "^3.6"
flake8 = ">=4.0.1"
pylint = ">=2.14.4"
flakeheaven = ">=1.0.1"
darglint = ">=1.8.1"
flake8-2020 = ">=1.6.1"
flake8-absolute-import = ">=1.0.0.1"
flake8-annotations = ">=2.9.0"
flake8-annotations-complexity = ">=0.0.7"
flake8-bandit = ">=3.0.0"
flake8-blind-except = ">=0.2.1"
flake8-breakpoint = ">=1.1.0"
flake8-broken-line = ">=0.4.0"
flake8-bugbear = ">=22.4.25"
flake8-builtins = ">=1.5.3"
flake8-class-attributes-order = ">=0.1.3"
flake8-comprehensions = ">=3.10.0"
flake8-datetimez = ">=20.10.0"
flake8-debugger = ">=4.1.2"
flake8-dunder-class-obj = ">=0.1.1"
flake8-eradicate = ">=1.2.1"
flake8-executable = ">=2.1.1"
flake8-expression-complexity = ">=0.0.11"
flake8-fixme = ">=1.1.1"
flake8-if-expr = ">=1.0.4"
flake8-isort = ">=4.1.1"
flake8-logging-format = ">=0.6.0"
flake8-no-implicit-concat = ">=0.3.3"
flake8-pep3101 = ">=1.3.0"
flake8-print = ">=5.0.0"
flake8-pytest = ">=1.3"
flake8-pytest-style = ">=1.6.0"
flake8-raise = ">=0.0.5"
flake8-requirements = ">=1.5.5"
flake8-return = ">=1.1.3"
flake8-simplify = ">=0.19.2"
flake8-strftime = ">=0.3.2"
flake8-string-format = ">=0.3.0"
flake8-super = ">=0.1.3"
flake8-use-pathlib = ">=0.2.1"
pep8-naming = ">=0.13.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
